# WinGadgetlib

./: CMakeLists.txt  README.md
CMakeModules/: FindNTL.cmake
include/: Field.hpp  annealing.hpp  basic_gadgets.hpp  gadget.hpp  hasher.hpp  merkle_tree.hpp  protoboard.hpp  protoboard_impl.hpp  sha256.hpp  utils.hpp
sources/: CMakeLists.txt  gadget.cpp  merkle_tree.cpp  test.cpp  utils.cpp
